change with webp and reorganize index

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <span></span><span></span><span></span>
         </button>
         <ul class="menu">
-          <li><a href="#projets">Projets</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#etonnements">Étonnements</a></li>
+          <li><a href="#projets">Projets</a></li>
           <li><a href="#apropos">Studio</a></li>
+          <li><a href="#etonnements">Étonnements</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -33,35 +33,6 @@
         <div class="container">
           <h1>Communication <span>+</span> concours<br>pour bâtir la ville de demain.</h1>
           <p>Le studio Diane Breton accompagne promoteurs, architectes et acteurs publics dans leurs projets urbains : identité, stratégie éditoriale et réponses à concours immobiliers.</p>
-        </div>
-      </section>
-
-      <!-- Projects -->
-      <section id="projets" class="projects">
-        <div class="container">
-          <h2 class="fade" data-animate>Dernières réalisations</h2>
-          <div class="grid">
-            <a href="projets/projet1/" class="card fade" data-animate>
-              <img src="assets/esquisse_1.png" alt="Concours ZAC Belleville" />
-              <div class="overlay"><h3>ZAC Belleville – Offre lauréate</h3></div>
-            </a>
-            <a href="projets/projet1/" class="card fade" data-animate>
-              <img src="assets/chateau.png" alt="Plaquette Siège Groupe Alta" />
-              <div class="overlay"><h3>Alta Group – Plaquette siège social</h3></div>
-            </a>
-            <a href="projets/projet1/" class="card fade" data-animate>
-              <img src="assets/ville_urba.png" alt="Identité Quartier Aster" />
-              <div class="overlay"><h3>Quartier Aster – Branding urbain</h3></div>
-            </a>
-            <a href="projets/projet1/" class="card fade" data-animate>
-              <img src="assets/reunion.jpg" alt="Concours MixCité" />
-              <div class="overlay"><h3>MixCité 2024 – Dossier de consultation</h3></div>
-            </a>
-            <a href="projets/projet1/" class="card fade" data-animate>
-              <img src="assets/ville_bleu.png" alt="Concours BatiHarmony" />
-              <div class="overlay"><h3>Concours BatiHarmony – Offre lauréate</h3></div>
-            </a>
-          </div>
         </div>
       </section>
 
@@ -119,6 +90,49 @@
         </div>
       </section>
 
+      <!-- Projects -->
+      <section id="projets" class="projects">
+        <div class="container">
+          <h2 class="fade" data-animate>Dernières réalisations</h2>
+          <div class="grid">
+            <a href="projets/projet1/" class="card fade" data-animate>
+              <img src="assets/esquisse_1.webp" alt="Concours ZAC Belleville" />
+              <div class="overlay"><h3>ZAC Belleville – Offre lauréate</h3></div>
+            </a>
+            <a href="projets/projet1/" class="card fade" data-animate>
+              <img src="assets/chateau.webp" alt="Plaquette Siège Groupe Alta" />
+              <div class="overlay"><h3>Alta Group – Plaquette siège social</h3></div>
+            </a>
+            <a href="projets/projet1/" class="card fade" data-animate>
+              <img src="assets/ville_urba.webp" alt="Identité Quartier Aster" />
+              <div class="overlay"><h3>Quartier Aster – Branding urbain</h3></div>
+            </a>
+            <a href="projets/projet1/" class="card fade" data-animate>
+              <img src="assets/reunion.jpg" alt="Concours MixCité" />
+              <div class="overlay"><h3>MixCité 2024 – Dossier de consultation</h3></div>
+            </a>
+            <a href="projets/projet1/" class="card fade" data-animate>
+              <img src="assets/ville_bleu.webp" alt="Concours BatiHarmony" />
+              <div class="overlay"><h3>Concours BatiHarmony – Offre lauréate</h3></div>
+            </a>
+          </div>
+        </div>
+      </section>
+
+    <!-- About -->
+    <section id="apropos" class="hero fade" data-animate>
+      <div class="container">
+        <h2>Le studio</h2>
+        <p>Installé à Rennes, Diane Breton réunit des compétences hybrides – design, rédaction, architecture, urbanisme – pour offrir une lecture transversale de la ville et des usages. Notre méthode associe créativité, rigueur réglementaire et narration pour transformer les contraintes urbaines en atouts différenciants.</p>
+        <div class="linkedin-center">
+          <a href="https://www.linkedin.com/in/diane-breton-049884127/" target="_blank" rel="noopener" class="linkedin-icon">
+            <img src="assets/linkedin-terre.svg" alt="LinkedIn" />
+          </a>
+        </div>
+      </div>
+    </section>
+
+
     <!-- Étonnements -->
     <section id="etonnements" class="etonnements fade" data-animate>
       <div class="container">
@@ -147,18 +161,6 @@
     </section>
 
 
-  <!-- About -->
-  <section id="apropos" class="hero fade" data-animate>
-    <div class="container">
-      <h2>Le studio</h2>
-      <p>Installé à Rennes, Diane Breton réunit des compétences hybrides – design, rédaction, architecture, urbanisme – pour offrir une lecture transversale de la ville et des usages. Notre méthode associe créativité, rigueur réglementaire et narration pour transformer les contraintes urbaines en atouts différenciants.</p>
-      <div class="linkedin-center">
-        <a href="https://www.linkedin.com/in/diane-breton-049884127/" target="_blank" rel="noopener" class="linkedin-icon">
-          <img src="assets/linkedin-terre.svg" alt="LinkedIn" />
-        </a>
-      </div>
-    </div>
-  </section>
 
   <!-- Contact -->
   <section id="contact" class="projects" style="padding-top:3rem;">
@@ -179,7 +181,7 @@
   </section>
     </main>
 
-    <footer>© <span id="year"></span> Diane Breton • Communication & Concours</footer>
+    <footer>© <span id="year"></span> Diane Breton • Accompagnement & Concours</footer>
 
     <script>
       document.getElementById("year").textContent=new Date().getFullYear();
