--- a/poles/collectivités/index.html
+++ b/poles/collectivités/index.html
@@ -26,7 +26,7 @@
       </div>
     </header>
 
-    <section class="hero" style="min-height:60vh;background:url('../../assets/ville_arrosée.png') center/cover no-repeat;">
+    <section class="hero" style="min-height:60vh;background:url('../../assets/ville_arrosée.webp') center/cover no-repeat;">
       <div class="container" style="background:rgba(255,255,255,0.8);padding:2rem 1.5rem;border-radius:0.75rem;max-width:720px;">
         <h1>Pôle Collectivités & aménageurs</h1>
         <p>Imaginer, valoriser et expliquer la fabrique de la ville auprès de tous les publics : du diagnostic urbain à la concertation.</p>
@@ -70,7 +70,7 @@
             <div class="overlay"><h3>Ville Verte</h3></div>
           </a>
           <a href="../projet-concertation.html" class="card">
-            <img src="../../assets/ville_arrosée.png" alt="Concertation Sud-Est" />
+            <img src="../../assets/ville_arrosée.webp" alt="Concertation Sud-Est" />
             <div class="overlay"><h3>Concertation Sud-Est</h3></div>
           </a>
         </div>
@@ -82,7 +82,7 @@
     </section>
 
     <footer>
-      © <span id="year"></span> Diane Breton • Communication &amp; Concours &nbsp;•&nbsp;
+      © <span id="year"></span> Diane Breton • Accompagnement &amp; Concours &nbsp;•&nbsp;
       <a href="../../index.html#services" style="color:var(--text);text-decoration:none;">← Retour aux services</a>
     </footer>
     <script>
