--- a/poles/design graphique/index.html
+++ b/poles/design graphique/index.html
@@ -26,7 +26,7 @@
       </div>
     </header>
 
-    <section class="hero" style="min-height:60vh;background:url('../../assets/chateau.png') center/cover no-repeat;">
+    <section class="hero" style="min-height:60vh;background:url('../../assets/chateau.webp') center/cover no-repeat;">
       <div class="container" style="background:rgba(255,255,255,0.8);padding:2rem 1.5rem;border-radius:0.75rem;max-width:720px;">
         <h1>Pôle Design graphique</h1>
         <p>Affiches, identités, éditions : donner une forme sensible à vos projets, quel que soit le support.</p>
@@ -66,11 +66,11 @@
         <h2 style="margin-top:3.5rem;">Études de cas</h2>
         <div class="grid" style="margin-top:2rem;">
           <a href="../projet-alta.html" class="card">
-            <img src="../../assets/chateau.png" alt="Plaquette Alta" />
+            <img src="../../assets/chateau.webp" alt="Plaquette Alta" />
             <div class="overlay"><h3>Plaquette Groupe Alta</h3></div>
           </a>
           <a href="../projet-flyers.html" class="card">
-            <img src="../../assets/ville_bleu.png" alt="Flyers" />
+            <img src="../../assets/ville_bleu.webp" alt="Flyers" />
             <div class="overlay"><h3>Campagne Flyers Rennes</h3></div>
           </a>
         </div>
@@ -82,7 +82,7 @@
     </section>
 
     <footer>
-      © <span id="year"></span> Diane Breton • Communication &amp; Concours &nbsp;•&nbsp;
+      © <span id="year"></span> Diane Breton • Accompagnement &amp; Concours &nbsp;•&nbsp;
       <a href="../../index.html#services" style="color:var(--text);text-decoration:none;">← Retour aux services</a>
     </footer>
     <script>
