--- a/poles/promoteurs/index.html
+++ b/poles/promoteurs/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <!-- HERO -->
-    <section class="hero" style="min-height:60vh;background:url('../../assets/chateau.png') center/cover no-repeat;">
+    <section class="hero" style="min-height:60vh;background:url('../../assets/chateau.webp') center/cover no-repeat;">
       <div class="container" style="background:rgba(255,255,255,0.8);padding:2rem 1.5rem;border-radius:0.75rem;max-width:720px;">
         <h1>Pôle Promoteurs immobiliers</h1>
         <p>De l’appel à projets à la commercialisation : un accompagnement créatif & technique taillé pour vos opérations.</p>
@@ -69,11 +69,11 @@
         <h2 style="margin-top:3.5rem;">Études de cas</h2>
         <div class="grid" style="margin-top:2rem;">
           <a href="projet-belleville.html" class="card">
-            <img src="../../assets/esquisse_1.png" alt="ZAC Belleville" />
+            <img src="../../assets/esquisse_1.webp" alt="ZAC Belleville" />
             <div class="overlay"><h3>ZAC Belleville</h3></div>
           </a>
           <a href="projet-batiharmony.html" class="card">
-            <img src="../../assets/ville_bleu.png" alt="BatiHarmony" />
+            <img src="../../assets/ville_bleu.webp" alt="BatiHarmony" />
             <div class="overlay"><h3>BatiHarmony</h3></div>
           </a>
         </div>
@@ -85,7 +85,7 @@
     </section>
 
     <footer>
-      © <span id="year"></span> Diane Breton • Communication &amp; Concours &nbsp;•&nbsp;
+      © <span id="year"></span> Diane Breton • Accompagnement &amp; Concours &nbsp;•&nbsp;
       <a href="../../index.html#services" style="color:var(--text);text-decoration:none;">← Retour aux services</a>
     </footer>
 
