revamp contact section

--- a/index.html
+++ b/index.html
@@ -163,22 +163,26 @@
 
 
   <!-- Contact -->
-  <section id="contact" class="projects" style="padding-top:3rem;">
-    <div class="container fade" data-animate>
-      <h2>Contact</h2>
-      <p>
-        Discutons de votre prochain concours ! 
-        <a href="mailto:contact@dianebreton.com" style="color:var(--accent);text-decoration:none;">
-          contact@dianebreton.com
-        </a>
-      </p>
-      <div class="linkedin-center" style="margin-top:2.2rem;">
-        <a href="https://www.linkedin.com/in/diane-breton-049884127/" target="_blank" rel="noopener" class="linkedin-icon">
-          <img src="assets/linkedin-sapin.svg" alt="LinkedIn" />
-        </a>
+    <section id="contact" class="projects contact-section" style="padding-top:3rem;">
+      <div class="container fade" data-animate>
+        <h2>Contact</h2>
+        <p>
+          Discutons de votre prochain concours ! 
+          <a href="mailto:contact@dianebreton.com" style="color:var(--accent);text-decoration:none;">
+            contact@dianebreton.com
+          </a>
+        </p>
+        <div class="contact-photo-wrapper">
+          <img src="assets/diane.jpeg" alt="Portrait de Diane Breton" class="contact-photo" />
+        </div>
+        <div class="linkedin-center" style="margin-top:2.2rem;">
+          <a href="https://www.linkedin.com/in/diane-breton-049884127/" target="_blank" rel="noopener" class="linkedin-icon">
+            <img src="assets/linkedin-sapin.svg" alt="LinkedIn" />
+          </a>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+
     </main>
 
     <footer>© <span id="year"></span> Diane Breton • Accompagnement & Concours</footer>
