update about section

--- a/etonnements/beton-biosource/index.html
+++ b/etonnements/beton-biosource/index.html
@@ -62,7 +62,7 @@
     </section>
 
     <footer>
-      © <span id="year"></span> Diane Breton • Étonnements &nbsp;•&nbsp;
+      © <span id="year"></span> Diane breton studio • Conseil & design éditorial pour les acteurs de la ville &nbsp;•&nbsp;
       <a href="../../index.html#etonnements" style="color:var(--text);text-decoration:none;">← Retour aux étonnements</a>
     </footer>
 
