--- a/projets/projet1/index.html
+++ b/projets/projet1/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <!-- HERO du projet -->
-    <section class="hero" style=" min-height:60vh; background:url('assets/esquisse_1.png') center/cover no-repeat;">
+    <section class="hero" style=" min-height:60vh; background:url('assets/esquisse_1.webp') center/cover no-repeat;">
       <div class="container" style="background:rgba(255,255,255,0.75);padding:2rem 1.5rem;border-radius:0.75rem;max-width:720px;">
         <h1>ZAC Belleville – Offre lauréate</h1>
         <p>Concours d'aménagement urbain · Paris&nbsp;20ᵉ · 2025</p>
@@ -55,8 +55,8 @@
         <div class="project-block">
           <h3>Galerie</h3>
           <div class="grid gallery">
-            <img src="../../assets/ville_urba.png" alt="Vue aérienne" class="card" />
-            <img src="../../assets/ville_arrosée.png" alt="Perspective végétale" class="card" />
+            <img src="../../assets/ville_urba.webp" alt="Vue aérienne" class="card" />
+            <img src="../../assets/ville_arrosée.webp" alt="Perspective végétale" class="card" />
             <img src="../../assets/reunion.jpg" alt="Atelier" class="card" />
           </div>
         </div>
@@ -70,7 +70,7 @@
 
 
     <footer>
-      © <span id="year"></span> Diane Breton • Communication &amp; Concours &nbsp;•&nbsp; <a href="../../index.html" style="color:var(--text);text-decoration:none;">Retour à l'accueil</a>
+      © <span id="year"></span> Diane breton studio • Conseil & design éditorial pour les acteurs de la ville &nbsp;•&nbsp; <a href="../../index.html" style="color:var(--text);text-decoration:none;">Retour à l'accueil</a>
     </footer>
 
     <script>
