--- a/poles/design graphique/index.html
+++ b/poles/design graphique/index.html
@@ -82,7 +82,7 @@
     </section>
 
     <footer>
-      © <span id="year"></span> Diane Breton • Accompagnement &amp; Concours &nbsp;•&nbsp;
+      © <span id="year"></span> Diane breton studio • Conseil & design éditorial pour les acteurs de la ville &nbsp;•&nbsp;
       <a href="../../index.html#services" style="color:var(--text);text-decoration:none;">← Retour aux services</a>
     </footer>
     <script>
