--- a/etonnements/beton-biosource/index.html
+++ b/etonnements/beton-biosource/index.html
@@ -18,10 +18,10 @@
           <span></span><span></span><span></span>
         </button>
         <ul class="menu">
-          <li><a href="../../index.html#projets">Projets</a></li>
-          <li><a href="../../index.html#services">Services</a></li>
-          <li><a href="../../index.html#etonnements">Étonnements</a></li>
-          <li><a href="../../index.html#apropos">Studio</a></li>
+          <li><a href="../../index.html#services">Expertises</a></li>
+          <li><a href="../../index.html#projets">Réalisations</a></li>
+          <li><a href="../../index.html#apropos">Le Studio</a></li>
+          <li><a href="../../index.html#etonnements">Carnet</a></li>
           <li><a href="../../index.html#contact">Contact</a></li>
         </ul>
       </div>
