--- a/index.html
+++ b/index.html
@@ -245,7 +245,12 @@
 
   </main>
 
-  <footer>© <span id="year"></span> Diane breton studio • Conseil & design éditorial pour les acteurs de la ville
+  <footer>
+    <div class="footer-line"></div>
+    <div>
+      © <span id="year"></span> Diane Breton studio • Conseil & design éditorial pour les acteurs de la ville
+      <br><span class="footer-bzh">Pensé & designé en Bretagne 🐚</span>
+    </div>
   </footer>
 
   <script>
