add biosource an try a prject page

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h2 class="fade" data-animate>Dernières réalisations</h2>
         <div class="grid">
           <a href="projets/b10/" class="card fade" data-animate>
-            <img src="assets/projets/couverture_b10.webp" alt="Via silva B10" />
+            <img src="assets/projets/b10_couv.webp" alt="Via silva B10" />
             <div class="overlay">
               <h3>Via silva B10 – Réponse à consultation</h3>
             </div>
@@ -117,6 +117,12 @@
             <img src="assets/projets/couverture_bois_du_chateau.webp" alt="Bois du chateau" />
             <div class="overlay">
               <h3>Bois du Chateau – Réponse à consultation</h3>
+            </div>
+          </a>
+          <a href="projets/biosource/" class="card fade" data-animate>
+            <img src="assets/projets/prod_biosource_pages.webp" alt="biosource" />
+            <div class="overlay">
+              <h3>Construire Bio <span>&</span> Geosourcé – Innovation</h3>
             </div>
           </a>
           <a href="projets/projet1/" class="card fade" data-animate>
